k8slearn/4.Kubernetes 配置管理/4.6.Kyverno/Manifest/kyverno-require-label.yaml
# kyverno-require-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-label
spec:
  validationFailureAction: enforce
  rules:
    - name: check-for-labels
      match:
        resources:
          kinds:
            - Pod
      validate: # 配置 Admission Webhook 的配置
        message: "label 'kyverno' is required"
        pattern:
          metadata:
            labels:
              kyverno: '?*'
